--- a/views/editar_mascota.pug
+++ b/views/editar_mascota.pug
@@ -20,5 +20,8 @@ html
       label(for="responsable") Responsable:
       input(type="text" name="responsable" value=mascotas.responsable required)
       br
+      label(for="telefono") Teléfono:
+      input(type="text" name="telefono" value=mascotas.telefono required)
+      br
       button(type="submit") Guardar cambios
       
