--- a/views/menu.pug
+++ b/views/menu.pug
@@ -7,9 +7,8 @@ html
     h2 Seleccionar un enlace
     ul
       li: a(href="/productos") Ir a productos
-      li: a(href="/mascotas") Ir a mascotas
       li: a(href="/turnos") Ir a turnos
-      li: a(href="/historias_clinicas") Ir a historia clínica
+      li: a(href="/mascotas") Ir a mascotas e historias clínicas
 
     h3 Información del usuario
     p Usuario: #{usuario.username}
