--- a/views/menu.pug
+++ b/views/menu.pug
@@ -9,6 +9,7 @@ html
       li: a(href="/productos") Ir a productos
       li: a(href="/turnos") Ir a turnos
       li: a(href="/mascotas") Ir a mascotas e historias clínicas
+      li: a(href="/registro") Registrar un nuevo usuario
 
     h3 Información del usuario
     p Usuario: #{usuario.username}
