--- a/views/mascotas.pug
+++ b/views/mascotas.pug
@@ -49,4 +49,7 @@ html
       label(for="responsable") Responsable:
       input(type="text" name="responsable" required)
       br
+      label(for="telefono") Teléfono:
+      input(type="text" name="telefono" required)
+      br
       button(type="submit") Registrar
