--- a/views/editar_producto.pug
+++ b/views/editar_producto.pug
@@ -4,14 +4,14 @@ html
     title Editar Producto
   body
     h1 Editar producto
-    form(action="/productos/" + producto.id + "/editar" method="POST")
+    form(action="/productos/" + productos._id + "/editar" method="POST")
       label(for="precio") Precio:
-      input(type="number" name="precio" value=producto.precio required)
+      input(type="number" name="precio" value=productos.precio required)
       br
       label(for="stock") Stock:
-      input(type="number" name="stock" value=producto.stock required)
+      input(type="number" name="stock" value=productos.stock required)
       br
       label(for="categoria") Categoría:
-      input(type="text" name="categoria" value=producto.categoria required)
+      input(type="text" name="categoria" value=productos.categoria required)
       br
       button(type="submit") Guardar cambios
