Gestión de usuarios

--- a/views/editar_historia_clinica.pug
+++ b/views/editar_historia_clinica.pug
@@ -3,7 +3,7 @@ html
   head
     title Editar Historia Clínica
   body
-    h1 Editar Historia Clínica
+    h1 Gestión de Historia Clínica
 
     // Tabla con la info actual
     table(border="1" cellpadding="2")
