--- a/views/editar_producto.pug
+++ b/views/editar_producto.pug
@@ -15,3 +15,6 @@ html
       input(type="text" name="categoria" value=productos.categoria required)
       br
       button(type="submit") Guardar cambios
+    hr
+    a(href="/productos") Volver a la gestión de productos
+    hr
