--- a/views/mascotas.pug
+++ b/views/mascotas.pug
@@ -3,7 +3,7 @@ html
   head
     title Lista de Mascotas
   body
-    h1 Mascotas registradas
+    h1 Gestión de Mascotas e Historias Clínicas
     table(border="1" cellpadding="2")
       thead
         tr
