--- a/views/menu.pug
+++ b/views/menu.pug
@@ -6,10 +6,10 @@ html
   body
     h2 Seleccionar un enlace
     ul
-      li: a(href="/productos") Ir a productos
-      li: a(href="/turnos") Ir a turnos
-      li: a(href="/mascotas") Ir a mascotas e historias clínicas
-      li: a(href="/registro") Registrar un nuevo usuario
+      li: a(href="/productos") Gestión de productos
+      li: a(href="/turnos") Gestión de turnos
+      li: a(href="/mascotas") Gestión de mascotas e historias clínicas
+      li: a(href="/usuarios") Gestión de usuarios
 
     h3 Información del usuario
     p Usuario: #{usuario.username}
