--- a/views/productos.pug
+++ b/views/productos.pug
@@ -3,7 +3,7 @@ html
   head
     title Lista de Productos
   body
-    h1 Productos
+    h1 Gestión de Productos
 
     table(border="1" cellpadding="2")
       thead
