--- a/views/editar_mascota.pug
+++ b/views/editar_mascota.pug
@@ -24,4 +24,7 @@ html
       input(type="text" name="telefono" value=mascotas.telefono required)
       br
       button(type="submit") Guardar cambios
-      
+      h3
+      hr
+      a(href="/mascotas") Volver a la Gestión de mascotas
+      hr
